Fixed layout problem in l mobile devices

--- a/web/bundles/ADG/css/comu.css
+++ b/web/bundles/ADG/css/comu.css
@@ -113,8 +113,7 @@ pre {
 .navbar-inverse .navbar-nav .open .dropdown-menu>.active>a {
 	background-color: #660000;
 }
-.navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-brand,
-.navbar-inverse .navbar-nav .open .dropdown-menu>li>a {
+.navbar-inverse .navbar-nav>li>a, .navbar-inverse .navbar-brand {
 	color: #DEB887;
 }
 .navbar-inverse .navbar-nav>.dropdown>a .caret, .navbar-inverse .navbar-nav>.dropdown>a .caret {
@@ -123,6 +122,9 @@ pre {
 }
 .navbar-inverse .navbar-toggle {
 	border-color: #660000;
+}
+.navbar-inverse .navbar-toggle .icon-bar {
+	background-color: #DEB887;
 }
 
 /*footer Color styles */
@@ -218,3 +220,24 @@ Format per imprimir
 		min-width: 345px;
 	}
 }
+
+/*------------------------------------------------------------------
+[3. Max Width: 859px]
+* Dropdown styles
+*/
+
+@media (max-width: 859px) {
+	.navbar-nav .open .dropdown-menu {
+		position: static;
+		float: none;
+		width: auto;
+		margin-top: 0;
+		background-color: transparent;
+		border: 0;
+		box-shadow: none;
+	}
+	 .dropdown-menu>li>a {
+	 	color: #DEB887;
+	 }
+}
+
